--- a/static/concept/parallax-concept-full-design.html
+++ b/static/concept/parallax-concept-full-design.html
@@ -14,151 +14,34 @@
             <h1>
                 История развития фирмы &laquo;Мебель&raquo;
             </h1>
+            <div class="bubble-enlarge" id="bubble-enlarge"></div>
         </header>
         <div class="parallax-container">
-            <div class="scroll-container" id="scroll-container"></div>
-            <div class="parallax-layer-1">
-                <div class="scale">
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2005
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2006
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2007
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2008
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2009
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2010
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2011
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2012
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2013
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2014
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2015
-                        </div>
-                        <hr>
+            <div class="parallax-layer-1 parallax-layer">
+                <div class="bubble" id="bubble_1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad reprehenderit veritatis reiciendis, hic minus incidunt corrupti laborum, sint molestiae sit nemo ratione illo et perferendis!</div>
+                <div class="container">
+                    <div id="timeline" class="timeline">
+                        <div id="timeline-track" class="timeline-track"></div>
                     </div>
                 </div>
             </div>
-            <div class="parallax-layer-2">
-                <div class="scale">
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2005
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2006
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2007
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2008
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2009
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2010
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2011
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2012
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2013
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2014
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2015
-                        </div>
-                        <hr>
+            <div class="parallax-layer-2 parallax-layer">
+                <div class="bubble" id="bubble_2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad reprehenderit veritatis reiciendis, hic minus incidunt corrupti laborum, sint molestiae sit nemo ratione illo et perferendis!</div>
+                <div class="bubble bubble_img" id="bubble_3"><img src="forest.jpg" alt=""></div>
+                
+                <div class="container">
+                    <div id="timeline1" class="timeline">
+                        <div id="timeline-track1" class="timeline-track"></div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <div class="scroll-container" id="scroll-container">
+        <div class="scroll-dummy" id="scroll-dummy"></div>
+    </div>
+    <script src="script.js"></script>
+
 </body>
 
 </html>
