--- a/public/index.html
+++ b/public/index.html
@@ -1,42 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <script src="script.js" defer></script>
-    <link rel="stylesheet" href="timelineStyle.css">
-</head>
-<body>
-<header>
-    <h1>Создай временную шкалу за 5 шагов:</h1>
-    <hr>
-    <p class="instruction"><span>Укажи временной интервал</span> <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M16.01 11H4v2h12.01v3L20 12l-3.99-4v3z"/></svg>
-        <span>Загрузи  фото</span>  <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M16.01 11H4v2h12.01v3L20 12l-3.99-4v3z"/></svg>
-        <span>Перетащи файлы к выбранной дате</span> <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M16.01 11H4v2h12.01v3L20 12l-3.99-4v3z"/></svg>
-        <span>Добавь описание</span>  <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M16.01 11H4v2h12.01v3L20 12l-3.99-4v3z"/></svg>
-        <span>Выбери цвета</span></p>
-
-</header>
-<main>
-<form id="barform">
-   цвет : <input type="color" name="color" id="color"/><br />
-   начало шкалы: <input type="number" name="startdate" id="startdate"/><br />
-   конец шкалы: <input type="number" name="enddate" id="enddate"/><br />
-</form>
-<button id="sendBarButton" onclick="sendBar()">send</button>
-<div id="eventform">
-    bar id: <input type="text" name="first_name" /><br />
-    date: <input type="text" name="last_name" /><br />
-</div>
-<div class="container">
-    <div id="timeline0" class="timeline" style="margin-bottom: 100px">
-        <div id="timeline-track0" class="timeline-track"></div>
-    </div>
-
-    <div id="timeline1" class="timeline">
-        <div id="timeline-track1" class="timeline-track"></div>
-    </div>
-</div>
-</main>
-<button id="createBarButton" onclick="openForm()">+</button>
-<footer></footer>
-</body>
-</html>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/favicon.ico><title>parallax</title><link href=/css/app.97ac279a.css rel=preload as=style><link href=/js/app.1861e9fb.js rel=preload as=script><link href=/js/chunk-vendors.628b8330.js rel=preload as=script><link href=/css/app.97ac279a.css rel=stylesheet></head><body><noscript><strong>We're sorry but parallax doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.628b8330.js></script><script src=/js/app.1861e9fb.js></script></body></html>
