--- a/static/concept/parallax-concept-full-design.html
+++ b/static/concept/parallax-concept-full-design.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,156 +8,90 @@
 </head>
 
 <body>
-    <div class="main-container">
-        <header>
-            <h1>
-                История развития фирмы &laquo;Мебель&raquo;
-            </h1>
+    <!-- НУЖЕН ЛИ ЭТОТ КОНТЕЙНЕР -->
+	<div class="main-container">
+        
+		<!-- ШАПКА -->
+		<header>
+            <h1>Создай временную шкалу за 5 шагов:</h1>
+            <hr>
+            <p class="instruction">
+				<span>Укажи временной интервал</span> 
+				<svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
+                    <path d="M0 0h24v24H0V0z" fill="none"></path>
+                    <path d="M16.01 11H4v2h12.01v3L20 12l-3.99-4v3z"></path>
+                </svg>
+                <span>Загрузи фото</span> 
+				<svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
+                    <path d="M0 0h24v24H0V0z" fill="none"></path>
+                    <path d="M16.01 11H4v2h12.01v3L20 12l-3.99-4v3z"></path>
+                </svg>
+                <span>Перетащи файлы к выбранной дате</span> 
+				<svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
+                    <path d="M0 0h24v24H0V0z" fill="none"></path>
+                    <path d="M16.01 11H4v2h12.01v3L20 12l-3.99-4v3z"></path>
+                </svg>
+                <span>Добавь описание</span> 
+				<svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
+                    <path d="M0 0h24v24H0V0z" fill="none"></path>
+                    <path d="M16.01 11H4v2h12.01v3L20 12l-3.99-4v3z"></path>
+                </svg>
+                <span>Выбери цвета</span>
+			</p>
         </header>
-        <div class="parallax-container">
-            <div class="scroll-container" id="scroll-container"></div>
-            <div class="parallax-layer-1">
-                <div class="scale">
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2005
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2006
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2007
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2008
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2009
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2010
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2011
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2012
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2013
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2014
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2015
-                        </div>
-                        <hr>
-                    </div>
-                </div>
-            </div>
-            <div class="parallax-layer-2">
-                <div class="scale">
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2005
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2006
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2007
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2008
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2009
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2010
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2011
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2012
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2013
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2014
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="scale_point">
-                        <div class="scale_point_mark">
-                            2015
-                        </div>
-                        <hr>
-                    </div>
-                </div>
-            </div>
-        </div>
+		
+		<!-- ТЕЛО -->
+		<main>
+			<form id="barform">
+			   цвет : <input type="color" name="color" id="color" /><br />
+			   начало шкалы: <input type="number" name="startdate" id="startdate" /><br />
+			   конец шкалы: <input type="number" name="enddate" id="enddate" /><br />
+			   <button id="sendBarButton" onclick="sendBar()">send</button>
+			</form>
+			<div id="eventform">
+				bar id: <input type="text" name="first_name" /><br />
+				date: <input type="text" name="last_name" /><br />
+			</div>
+			
+			<div class="parallax-container">
+				<div class="parallax-layer-1 parallax-layer">
+					<svg width="1440" height="414" viewBox="0 0 1440 414" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M1462 182.451V293.865C1461.88 294.216 1461.65 294.479 1461.41 294.742C1460.36 296.144 1459.07 296.495 1457.55 295.706C1457.43 295.706 1457.43 295.618 1457.32 295.53C1441.27 285.362 1138.31 266.691 1049.77 270.635C821.763 276.772 699.501 292.638 618.227 312.624C540.349 331.733 500.415 354.612 441.509 376.264C312.103 430.437 -37 410.363 -37 410.363V67.6185C-37 67.6185 -37 67.6185 74.0197 73.6669C179.887 83.8353 302.5 62.7096 425.465 30.7143C667.881 -25.0365 754.659 -3.91082 955.385 86.1144C1150.96 173.861 1446.54 182.1 1461.41 182.451C1461.65 182.451 1461.88 182.451 1462 182.451Z" fill="#95BCBA"/>
+					</svg>
+					<div class="container">
+						<div id="timeline" class="timeline">
+							<div id="timeline-track" class="timeline-track"></div>
+						</div>
+					</div>
+					<!--div class="bubble" id="bubble_1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad reprehenderit veritatis reiciendis, hic minus incidunt corrupti laborum, sint molestiae sit nemo ratione illo et perferendis!</div-->
+				</div>
+				<div class="parallax-layer-2 parallax-layer">
+					<svg width="1440" height="288" viewBox="0 0 1440 288" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M-29 146.754V236.37C-28.8852 236.652 -28.6557 236.863 -28.4262 237.075C-27.3933 238.203 -26.1309 238.485 -24.6389 237.85C-24.5241 237.85 -24.5241 237.78 -24.4094 237.709C-8.68649 229.53 288.212 214.512 374.975 217.685C598.424 222.621 718.239 235.383 797.886 251.458C874.205 266.829 913.341 285.232 971.068 302.647C1097.88 346.221 1440 330.075 1440 330.075V54.3888C1440 54.3888 1440 54.3888 1331.2 59.2538C1227.45 67.4327 1107.29 50.4403 986.791 24.705C749.226 -20.1381 664.184 -3.14566 467.476 69.2659C275.703 139.844 -13.8509 146.472 -28.4262 146.754C-28.7705 146.754 -28.8852 146.754 -29 146.754Z" fill="#EDAEC6"/>
+					</svg>
+					<div class="container">
+						<div id="timeline1" class="timeline">
+							<div id="timeline-track1" class="timeline-track"></div>
+						</div>
+					</div>
+					<!--div class="bubble" id="bubble_2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad reprehenderit veritatis reiciendis, hic minus incidunt corrupti laborum, sint molestiae sit nemo ratione illo et perferendis!</div>
+					<div class="bubble bubble_img" id="bubble_3"><img src="forest.jpg" alt=""></div-->
+				</div>
+			</div>
+		</main>
     </div>
+	
+	<!-- СКРОЛЛ -->
+    <!--div class="scroll-container" id="scroll-container">
+        <div class="scroll-dummy" id="scroll-dummy"></div>
+    </div-->
+	
+	<!-- КНОПКА + -->
+	<button id="createBarButton" onclick="openForm()">+</button>
+	
+	<!-- ПОДВАЛ -->
+	<footer></footer>
+	
+	<script src="script.js"></script>
 </body>
-
 </html>
